blue-green/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: blue-green
  name: blue-green
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: blue-green
    weight: 0

  alternateBackends:
  - kind: Service
    name: user{n}-hello-world
    weight: 10
